@@ -2,18 +2,37 @@ package ru.rerumu.backups.zfs_api;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import ru.rerumu.backups.models.ZFSFileSystem;
+import ru.rerumu.backups.factories.ProcessWrapperFactory;
 import ru.rerumu.backups.zfs_api.impl.ProcessWrapperImpl;
 
+import java.io.BufferedInputStream;
 import java.io.IOException;
 import java.util.Arrays;
+import java.util.List;
+import java.util.concurrent.ExecutionException;
 
-public class ZFSListSnapshots extends ProcessWrapperImpl {
+public class ZFSListSnapshots  {
     protected final Logger logger = LoggerFactory.getLogger(ZFSListSnapshots.class);
 
-    public ZFSListSnapshots(String fileSystemName) throws IOException {
-        super(Arrays.asList(
-                "zfs","list","-rH","-t","snapshot","-o","name","-s","creation","-d","1", fileSystemName
-        ));
+    private final ProcessWrapper processWrapper;
+
+    public ZFSListSnapshots(String fileSystemName, ProcessWrapperFactory processWrapperFactory) throws IOException {
+
+        processWrapper = processWrapperFactory.getProcessWrapper(
+                List.of(
+                        "zfs","list","-rH","-t","snapshot","-o","name","-s","creation","-d","1", fileSystemName
+                )
+        );
+
+        processWrapper.run();
+        processWrapper.setStderrProcessor(logger::error);
+    }
+
+    public BufferedInputStream getBufferedInputStream() {
+        return processWrapper.getBufferedInputStream();
+    }
+
+    public void close() throws InterruptedException, IOException, ExecutionException {
+        processWrapper.close();
     }
 }
